<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddColorCodeActivity"
    android:background="@color/background"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <RelativeLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:paddingTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:background="@drawable/bgthree"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/arrow_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="A D D   C O L O R   C O D E"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </RelativeLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingScreen"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/loading"
        android:visibility="gone"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/colorCodeNameInputLayout"
            style="CustomTextInputOutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/colorCodeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/colorCodeDescriptionInputLayout"
            style="CustomTextInputOutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/colorCodeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pick_color_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Pick Color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textSize="18sp"
            android:text="Your picked color is:" />

        <View
            android:id="@+id/preview_selected_color"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/add_colorcode_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="Finish" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>